--- a/templates/admin.html
+++ b/templates/admin.html
@@ -94,6 +94,12 @@
                 onsubmit="return confirm('Delete this product?');">
             <button class="bg-red-600 hover:bg-red-700 text-white px-3 py-1 rounded">
               Delete
+
+              <a href="/edit-product/{{ p.id }}"
+   class="bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded">
+   Edit
+</a>
+
             </button>
           </form>
         </td>
