--- a/templates/products.html
+++ b/templates/products.html
@@ -28,7 +28,7 @@
 <!-- Brand buttons -->
 <div class="max-w-7xl mx-auto px-6 flex gap-3 flex-wrap mb-10">
   <button onclick="filterBrand('All')" class="px-5 py-2 bg-black text-white rounded-full">All</button>
-  <button onclick="filterBrand('BioLink')" class="brand">BioLink</button>
+  <button onclick="filterBrand('Endroid')" class="brand">Endroid</button>
   <button onclick="filterBrand('Mantra')" class="brand">Mantra</button>
   <button onclick="filterBrand('Secureye')" class="brand">Secureye</button>
   <button onclick="filterBrand('eSSL')" class="brand">eSSL</button>
