--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
 
     <div class="flex items-center gap-3">
-      <span class="text-xl font-semibold">Vaishnavi Time Solution</span>
+      <span class="text-xl font-semibold">Vaishnavi Time Solutions</span>
     </div>
 
     <div class="flex gap-8 items-center text-sm">
