--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
 
-        <img  src="static/images/1.png">
+        <img  src="static/images/logo 1 s.png">
 
     </div>
 
