--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
 
   <div class="relative w-full overflow-hidden">
     <div id="brand-track" class="flex gap-20 px-10 items-center">
-      <img src="https://biolinkattendance.com/Content/assets/images/logo-dark.PNG" class="h-16 object-contain opacity-80 hover:opacity-100 transition">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRY-IzsVoF5PYRL0aFHDmZ9O2PU4CNdAbN2VA&s" class="h-16 object-contain opacity-80 hover:opacity-100 transition">
       <img src="https://upload.wikimedia.org/wikipedia/commons/7/7d/Mantra_Softech.png" class="h-20 object-contain opacity-90 hover:opacity-100 transition">
       <img src="https://s3-eu-west-1.amazonaws.com/tpd/logos/5e354a94fe8a100001b3e592/0x0.png" class="h-16 object-contain opacity-80 hover:opacity-100 transition">
       <img src="https://lenvica.com/wp-content/uploads/2015/10/essl-devices-are-compatible-with-AttendHRM.jpg" class="h-16 object-contain opacity-80 hover:opacity-100 transition">
