--- a/templates/index.html
+++ b/templates/index.html
@@ -141,10 +141,10 @@ setInterval(() => {
     <div>
       <h2 class="text-3xl font-semibold">Vaishnavi Time Solutions</h2>
       <p class="mt-4 text-gray-600 leading-relaxed">
-        Office No. 12, 2nd Floor,<br>
-        XYZ Business Plaza,<br>
-        Near Metro Station,<br>
-        Pune, Maharashtra – 411001
+        27VANSH PLAZAOFFICE NO.B-2,<br>
+        UPPER GROUND FLOOR,<br>
+        Gurunanak Pura, Laxmi Nagar,<br>
+       New Delhi, Delhi 110092
       </p>
 <div id="contact" class="bg-white py-24">
 
@@ -171,7 +171,7 @@ setInterval(() => {
     <!-- Map -->
     <iframe
       class="w-full h-96 rounded-3xl shadow"
-      src="https://www.google.com/maps?q=Pune&output=embed">
+      src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d643.3364688183086!2d77.2792088652045!3d28.63625702799451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd68ba5920f1%3A0x888ea9652dbe8e6c!2sVAISHNAVI%20TIME%20SOLUTIONS!5e0!3m2!1sen!2sin!4v1768645348427!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">">
     </iframe>
 
   </div>
