--- a/templates/index.html
+++ b/templates/index.html
@@ -216,7 +216,9 @@ setInterval(() => {
       <h4 class="font-semibold text-black mb-3">Contact Us</h4>
       <p>Delhi, India</p>
       <p>📞 +91 9818536810</p>
-      <p>📧 info.vtsmail@gmail.com</p>
+         <p>📞 +91 9625266985</p>
+         <p>📞 +91 8178747109</p>
+      <p>📧 info@vtsmail.in</p>
 
       <div class="mt-4 flex gap-4">
         <a href="tel:+919818536810" class="bg-black text-white px-4 py-2 rounded-full">
