--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,15 @@
 <head>
     <title>Vaishnavi Time Solutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7Z1BV0M0DT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7Z1BV0M0DT');
+</script>
 </head>
 
 <body class="bg-gray-100 text-gray-900">
