--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,6 +3,15 @@
 <head>
 <title>VTS Admin</title>
 <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7Z1BV0M0DT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7Z1BV0M0DT');
+</script>
 </head>
 
 <body class="bg-gradient-to-br from-black via-gray-900 to-black text-white">
