--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,15 @@
 <head>
   <title>Admin Login</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7Z1BV0M0DT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7Z1BV0M0DT');
+</script>
 </head>
 
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
