--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -56,7 +56,11 @@
 <div class="max-w-7xl mx-auto px-6 py-20 grid md:grid-cols-2 gap-16 items-center">
 
   <div class="bg-white rounded-3xl shadow p-10">
-    <img src="{{ p.image }}" class="w-full h-96 object-contain">
+   <img 
+  src="{% if p.image.startswith('http') %}{{ p.image }}{% else %}/static/uploads/{{ p.image }}{% endif %}"
+  class="w-full h-96 object-contain"
+>
+
   </div>
 
   <div>
@@ -66,7 +70,7 @@
 
     <a
       target="_blank"
-      href="https://wa.me/919999999999?text=I%20am%20interested%20in%20{{p.brand}}%20{{p.name}}"
+      href="https://wa.me/919818536810?text=I%20am%20interested%20in%20{{p.brand}}%20{{p.name}}"
       class="inline-block mt-10 bg-black text-white px-10 py-4 rounded-full text-lg">
       Get Quote on WhatsApp
     </a>
