--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -20,15 +20,12 @@
 
   <!-- Image -->
   <div class="bg-white rounded-3xl shadow p-10 flex justify-center">
-    {% if p.image %}
-      {% if p.image.startswith('http') %}
-        <img src="{{ p.image }}" class="w-full h-96 object-contain">
-      {% else %}
-        <img src="/static/uploads/{{ p.image }}" class="w-full h-96 object-contain">
-      {% endif %}
-    {% else %}
-      <img src="https://source.unsplash.com/600x600/?biometric,scanner" class="w-full h-96 object-contain">
-    {% endif %}
+    <img
+  src="/static/uploads/{{ p.image }}"
+  onerror="this.src='https://source.unsplash.com/600x600/?biometric,scanner'"
+  class="w-full h-96 object-contain"
+>
+
   </div>
 
   <!-- Details -->
